syntax = "proto3";

package io.meroxa.funtime;

import "google/protobuf/struct.proto";

option go_package = "github.com/meroxa/funtime/proto";

message ProcessRecordRequest {
  repeated Record records = 1;
}

message ProcessRecordResponse {
  repeated Record records = 1;
}

message Record {
  string key = 1;
  string value = 2;
  int64 timestamp = 3;
  google.protobuf.Struct structured = 4;
}

service Function {
  rpc Process(ProcessRecordRequest) returns (ProcessRecordResponse);
}
